<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_FFFFFF"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_edit_profile"
        layout="@layout/toollbar_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cdbol.br.com.clubedabola.screens.home.profile.edit.EditProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_FFFFFF"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_marginBottom="17dp"
                android:layout_marginTop="22dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/default_margin_16_dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/gray_828282"
                    app:passwordToggleTint="@color/gray_828282">

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_30_dp"
                        android:layout_marginRight="@dimen/default_margin_5_dp"
                        android:background="@null"
                        android:hint="@string/edt_title_name"
                        android:text="Fernando"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/white_ice" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/default_margin_16_dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/gray_828282"
                    app:passwordToggleTint="@color/gray_828282">

                    <EditText
                        android:id="@+id/edt_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_30_dp"
                        android:layout_marginBottom="@dimen/default_margin_8_dp"
                        android:background="@null"
                        android:hint="@string/edt_title_nickname"
                        android:text="Ligeiro"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/white_ice" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/default_margin_16_dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/gray_828282"
                    app:passwordToggleTint="@color/gray_828282">

                    <EditText
                        android:id="@+id/edt_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_30_dp"
                        android:layout_marginBottom="@dimen/default_margin_8_dp"
                        android:background="@null"
                        android:hint="@string/edt_title_birthday"
                        android:text="23/06/1985"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/white_ice" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/default_margin_16_dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/gray_828282"
                    app:passwordToggleTint="@color/gray_828282">

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_30_dp"
                        android:layout_marginBottom="@dimen/default_margin_8_dp"
                        android:background="@null"
                        android:hint="@string/edt_title_email"
                        android:text="nandoligeiro@gmail.com"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/white_ice" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_change_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textSize="18sp"
                        android:textColor="@color/black_000000"
                        android:textColorHint="@color/black_000000"
                        android:hint="@string/edt_title_change_pass"
                        />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="19dp"
                        android:layout_height="21dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="24dp"
                        android:tint="@color/black_000000"
                        android:layout_alignParentRight="true"
                        app:srcCompat="@drawable/ic_next_arrow" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="0.5dp"
                    android:background="@color/white_ice" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
